--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -26,42 +26,41 @@
 
     <div class="landing-spacer"></div>
 
-    <div class="landing-center">
-      <pre aria-hidden="true" class="ascii-bh">
-
-                                      @%%%%#####%%%%@
-                                @@%@%**+=--:..::--++*#%@@@
-                           %#%@#**-.                  .-=*#%%@
-                         @%%%#+-.                        .:=*#@
-                      @%@@%**:                              :=*#@
-                  %@%%%%*+=              %**%%##%%.           .:+*%%@
-                @@@%%#*=:             +##:-=:===--@%*=          .:=*##@
-              @@%%#*=-.            .=+* *@@@@@@@@@#:#%+           .:-+*#%%@
-           ##*++-:                +.-.#%%@%%@@%%@@%@%:**               :-++**#%
-       #*=-.                    -*:*:@@@@%@@@@@@@@@@@@=#+                 ..:-=++*
-   %**+=:                      -%*= #%%@@@@@@@@@@@@@@@#:#                   ...:-==+*
-%%#*++=:                        +*  #@%%%@%%@@%%@@%@@%%:                      ...:-++**%
-   %#*+==:.                                -:=+==:.                          .:-==++*
-       ##*+=-:                                                           .:-==++*#
-          %##***++==-.                                          ..---==++***#
-                @%%%#%#****+*+==.    :::----:-------:.   .:+******#%%%
-                       %@%%@%%%%*     -*-::++=++-::..    :*%%%@@@@
-                           %%%@@%#.        ++**=.       :#@@%@@@%
-                                 @@@=                .+@@@
-                                    @%*=.         -=#@@
-                                      %@@%@@@@@@@%@@%
-
-      </pre>
+        <div class="landing-center">
       <div class="info-line">PHYSICS @ UCI // SWE // AI // RESEARCH</div>
-      <p class="desc">Building systems at the intersection of <span class="accent-1">physics</span> and <span class="accent-2">intelligence</span>.</p>
+      <pre aria-hidden="true" class="ascii-bh">
+ 
+                                       @%%%%#####%%%%@
+                                 @@%@%**+=--:..::--++*#%@@@
+                            %#%@#**-.                  .-=*#%%@
+                          @%%%#+-.                        .:=*#@
+                       @%@@%**:                              :=*#@
+                   %@%%%%*+=              %**%%##%%.           .:+*%%@
+                 @@@%%#*=:             +##:-=:===--@%*=          .:=*##@
+               @@%%#*=-.            .=+* *@@@@@@@@@#:#%+           .:-+*#%%@
+            ##*++-:                +.-.#%%@%%@@%%@@%@%:**               :-++**#%
+        #*=-.                    -*:*:@@@@%@@@@@@@@@@@@=#+                 ..:-=++*
+    %**+=:                      -%*= #%%@@@@@@@@@@@@@@@#:#                   ...:-==+*
+ %%#*++=:                        +*  #@%%%@%%@@%%@@%@@%%:                      ...:-++**%
+    %#*+==:.                                -:=+==:.                          .:-==++*
+        ##*+=-:                                                           .:-==++*#
+           %##***++==-.                                          ..---==++***#
+                 @%%%#%#****+*+==.    :::----:-------:.   .:+******#%%%
+                        %@%%@%%%%*     -*-::++=++-::..    :*%%%@@@@
+                            %%%@@%#.        ++**=.       :#@@%@@@%
+                                  @@@=                .+@@@
+                                     @%*=.         -=#@@
+                                       %@@%@@@@@@@%@@%
+ 
+      </pre>
     </div>
 
     <div class="landing-spacer"></div>
 
     <div class="cta-row">
-      <a class="button button-outline accent" href="#experience">VIEW_PROJECTS</a>
+      <a class="button button-outline" href="#experience">PROJECTS</a>
       <a class="button button-outline" href="#experience">WORK_EXPERIENCE</a>
-      <a class="button button-outline" href="/assets/resume.pdf" target="_blank" rel="noopener">DOWNLOAD_RESUME</a>
+      <a class="button button-outline" href="/assets/resume.pdf" target="_blank" rel="noopener">RESUME</a>
       <a class="button button-outline" href="#contact">CONTACT</a>
     </div>
   </div>
