--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -59,7 +59,7 @@
 
     <div class="cta-row">
       <a class="button button-outline" href="#experience">PROJECTS</a>
-      <a class="button button-outline" href="#experience">WORK_EXPERIENCE</a>
+      <a class="button button-outline" href="#experience">EXPERIENCE</a>
       <a class="button button-outline" href="/assets/resume.pdf" target="_blank" rel="noopener">RESUME</a>
       <a class="button button-outline" href="#contact">CONTACT</a>
     </div>
