--- a/src/components/Publications.astro
+++ b/src/components/Publications.astro
@@ -1,7 +1,7 @@
 <section id="publications" class="section" aria-labelledby="pubs-heading">
   <div class="container">
     <div class="module">
-      <h2 id="pubs-heading" class="h2">Publications</h2>
+      <h2 id="pubs-heading" class="h2">Papers</h2>
       <ul class="pub-list">
         <li class="pub">
           <div class="pub-main">
