--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -40,6 +40,7 @@
     <div class="landing-spacer"></div>
     <div class="landing-spacer"></div>
     <div class="landing-spacer"></div>
+    <div class="landing-spacer"></div>
 
     <div class="cta-row">
       <a class="button button-outline" href="#experience">PROJECTS</a>
@@ -48,6 +49,8 @@
       <a class="button button-outline" href="#contact">CONTACT</a>
     </div>
 
+    <div class="landing-spacer"></div>
+    <div class="landing-spacer"></div>
     <div class="landing-spacer"></div>
     <div class="landing-spacer"></div>
     <div class="landing-spacer"></div>
