--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,7 +20,7 @@
               <path d="M6.94 7.5c0 .91-.73 1.65-1.64 1.65-.9 0-1.64-.74-1.64-1.65 0-.9.74-1.64 1.64-1.64.91 0 1.64.74 1.64 1.64ZM3.99 20.5h2.62V9.5H3.99v11Zm6.23-11h-2.6v11h2.6v-6.13c0-1.61.31-3.17 2.29-3.17 1.96 0 1.99 1.83 1.99 3.26v6.04h2.62v-6.83c0-3.37-.73-5.97-4.39-5.97-1.78 0-2.97.98-3.47 1.91h-.04v-1.61Z" fill="currentColor"/>
             </svg>
           </a>
-          <a href="https://x.com/" target="_blank" rel="noopener" aria-label="X" class="icon-link">
+          <a href="https://x.com/johrmohr" target="_blank" rel="noopener" aria-label="X" class="icon-link">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M18.244 2H21.5l-7.5 8.57L23.5 22h-6.9l-5.4-6.36L4.9 22H1.643l8.03-9.16L.5 2h7.05l4.86 5.64L18.245 2Zm-1.21 18h2.06L7.06 4H4.91l12.123 16Z" fill="currentColor"/>
             </svg>
