--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -43,10 +43,10 @@
     <div class="landing-spacer"></div>
 
     <div class="cta-row">
-      <a class="button button-outline" href="#experience">PROJECTS</a>
       <a class="button button-outline" href="#experience">EXPERIENCE</a>
+      <a class="button button-outline" href="#research">RESEARCH</a>
       <a class="button button-outline" href="/assets/resume.pdf" target="_blank" rel="noopener">RESUME</a>
-      <a class="button button-outline" href="#contact">CONTACT</a>
+      <a class="button button-outline" href="mailto:3moreno.jordan@gmail.com">CONTACT</a>
     </div>
 
     <div class="landing-spacer"></div>
